# glm_api

./: README.md
Prompt/: let_deepseek_as_teacher.md
agent_tool/: main.py  pyproject.toml
basic_chat/: call_api.ipynb
